# conjugame-ultimate

./: .env.example  .gitignore  AGENTS.md  BUILD.bazel  WORKSPACE  common-services.yml  docker-compose.dev.yml  docker-compose.prod.yml  package-scripts.js  package.json  pnpm-lock.yaml  readme.md  starter_app.db  tsconfig.json  turbo.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  dependabot-auto-fix.yml  main.yml
apps/api/: Dockerfile.dev
apps/database/: .env.example  .gitignore  Dockerfile  Makefile  README.md  index.d.ts  index.js  index.ts  package.json  tsconfig.json
apps/next/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  MIGRATION_INSTRUCTIONS.md  SECURITY_IMPLEMENTATION.md  auth.ts  middleware.bak  middleware.ts  next.config.js  package.json  playwright.config.ts  proxy.ts  routes.ts  tailwind.config.js  tsconfig.json
docs/: IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_GUIDE.md  README_FEATURE.md
docs/plans/: 2026-01-29-user-detail-bento-layout.md  2026-01-30-entity-detail-navigation-design.md  2026-01-30-entity-detail-pages-implementation.md  2026-02-03-sidebar-entity-organization-design.md  2026-02-03-sidebar-entity-sections-implementation.md  2026-02-06-entity-image-upload-design.md  2026-02-06-entity-image-upload-implementation.md  2026-02-08-gallery-lightbox-design.md  2026-02-08-gallery-lightbox.md  2026-02-21-character-relationships-design.md  2026-02-21-character-relationships-implementation.md  2026-03-02-character-attributes-infobox.md  (+10 more)
scripts/: README.md  check-dependabot.sh  fix-dependabot-issues.js
(+281 files in other folders)
